test/test_rest2proto/main.c
/* Generated by re2c 0.14.3 on Tue Nov 10 19:37:09 2015 */
#line 1 "main.re"
/*
Source Generated with 'generate.lua'
*/

//HEADERS
#include <stdio.h>
#include <string.h>
#include <stdlib.h>

//DEFINES
#define YYCTYPE        char
#define YYPEEK()       (cursor >= limit ? 0 : *cursor)
#define YYSKIP()       ++cursor
#define YYBACKUP()     marker = cursor
#define YYBACKUPCTX()  ctxmarker = cursor
#define YYRESTORE()    cursor = marker
#define YYRESTORECTX() cursor = ctxmarker

typedef struct {
   const char*begin;
   const char*end;
}Position;
Position uri;
Position variable;
Position body;
int scanner(const char * cursor, const char * const limit,int *var_method,int *var_uri,int *var_version,int *var_body )
{
   const char * marker;
   const char * ctxmarker;
   char buffer[127];

   int var_request_header;
   #line 50 "main.re"

   
#line 39 "<stdout>"
{
	YYCTYPE yych;

	YYBACKUP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'C':	goto yy8;
	case 'D':	goto yy7;
	case 'G':	goto yy3;
	case 'H':	goto yy5;
	case 'O':	goto yy9;
	case 'P':	goto yy6;
	case 'T':	goto yy10;
	default:	goto yy2;
	}
yy2:
#line 52 "main.re"
	{ *var_method=0;goto lbl_method;}
#line 58 "<stdout>"
yy3:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'E':	goto yy47;
	default:	goto yy4;
	}
yy4:
	YYRESTORE ();
	goto yy2;
yy5:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'E':	goto yy43;
	default:	goto yy4;
	}
yy6:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'O':	goto yy37;
	case 'U':	goto yy36;
	default:	goto yy4;
	}
yy7:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'E':	goto yy30;
	default:	goto yy4;
	}
yy8:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'O':	goto yy23;
	default:	goto yy4;
	}
yy9:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'P':	goto yy16;
	default:	goto yy4;
	}
yy10:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'R':	goto yy11;
	default:	goto yy4;
	}
yy11:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'A':	goto yy12;
	default:	goto yy4;
	}
yy12:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'C':	goto yy13;
	default:	goto yy4;
	}
yy13:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'E':	goto yy14;
	default:	goto yy4;
	}
yy14:
	YYSKIP ();
#line 60 "main.re"
	{ *var_method=8;goto lbl_method;}
#line 137 "<stdout>"
yy16:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'T':	goto yy17;
	default:	goto yy4;
	}
yy17:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'I':	goto yy18;
	default:	goto yy4;
	}
yy18:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'O':	goto yy19;
	default:	goto yy4;
	}
yy19:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'N':	goto yy20;
	default:	goto yy4;
	}
yy20:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'S':	goto yy21;
	default:	goto yy4;
	}
yy21:
	YYSKIP ();
#line 59 "main.re"
	{ *var_method=7;goto lbl_method;}
#line 177 "<stdout>"
yy23:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'N':	goto yy24;
	default:	goto yy4;
	}
yy24:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'N':	goto yy25;
	default:	goto yy4;
	}
yy25:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'E':	goto yy26;
	default:	goto yy4;
	}
yy26:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'C':	goto yy27;
	default:	goto yy4;
	}
yy27:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'T':	goto yy28;
	default:	goto yy4;
	}
yy28:
	YYSKIP ();
#line 58 "main.re"
	{ *var_method=6;goto lbl_method;}
#line 217 "<stdout>"
yy30:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'L':	goto yy31;
	default:	goto yy4;
	}
yy31:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'E':	goto yy32;
	default:	goto yy4;
	}
yy32:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'T':	goto yy33;
	default:	goto yy4;
	}
yy33:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'E':	goto yy34;
	default:	goto yy4;
	}
yy34:
	YYSKIP ();
#line 57 "main.re"
	{ *var_method=5;goto lbl_method;}
#line 250 "<stdout>"
yy36:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'T':	goto yy41;
	default:	goto yy4;
	}
yy37:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'S':	goto yy38;
	default:	goto yy4;
	}
yy38:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'T':	goto yy39;
	default:	goto yy4;
	}
yy39:
	YYSKIP ();
#line 55 "main.re"
	{ *var_method=3;goto lbl_method;}
#line 276 "<stdout>"
yy41:
	YYSKIP ();
#line 56 "main.re"
	{ *var_method=4;goto lbl_method;}
#line 281 "<stdout>"
yy43:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'A':	goto yy44;
	default:	goto yy4;
	}
yy44:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'D':	goto yy45;
	default:	goto yy4;
	}
yy45:
	YYSKIP ();
#line 54 "main.re"
	{ *var_method=2;goto lbl_method;}
#line 300 "<stdout>"
yy47:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'T':	goto yy48;
	default:	goto yy4;
	}
yy48:
	YYSKIP ();
#line 53 "main.re"
	{ *var_method=1;goto lbl_method;}
#line 312 "<stdout>"
}
#line 61 "main.re"

lbl_method:
   if(!*var_method)
   {
      printf("method nao encontrado!\n");
      return 0;
   }
   
#line 323 "<stdout>"
{
	YYCTYPE yych;
	yych = YYPEEK ();
	switch (yych) {
	case ' ':	goto yy53;
	default:	goto yy52;
	}
yy52:
#line 69 "main.re"
	{ return -1; }
#line 334 "<stdout>"
yy53:
	YYSKIP ();
#line 70 "main.re"
	{ goto lbl_space_uri;}
#line 339 "<stdout>"
}
#line 71 "main.re"

lbl_space_uri:
   uri.begin=cursor;
   uri.end=0;
   
#line 347 "<stdout>"
{
	YYCTYPE yych;
	yych = YYPEEK ();
	switch (yych) {
	case '.':
	case '/':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy58;
	default:	goto yy57;
	}
yy57:
#line 76 "main.re"
	{ *var_uri=0;goto lbl_uri;}
#line 421 "<stdout>"
yy58:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '.':
	case '/':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy58;
	default:	goto yy60;
	}
yy60:
#line 77 "main.re"
	{ *var_uri=1;goto lbl_uri;}
#line 495 "<stdout>"
}
#line 78 "main.re"

lbl_uri:
   if(!*var_uri)
   {
      printf("uri nao encontrado!\n");
      return 0;
   }
   uri.end=cursor;
   
#line 507 "<stdout>"
{
	YYCTYPE yych;
	yych = YYPEEK ();
	switch (yych) {
	case ' ':	goto yy64;
	default:	goto yy63;
	}
yy63:
#line 87 "main.re"
	{ return -2; }
#line 518 "<stdout>"
yy64:
	YYSKIP ();
#line 88 "main.re"
	{ goto lbl_space_version;}
#line 523 "<stdout>"
}
#line 89 "main.re"

lbl_space_version:
   
#line 529 "<stdout>"
{
	YYCTYPE yych;
	YYBACKUP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'H':	goto yy69;
	default:	goto yy68;
	}
yy68:
#line 92 "main.re"
	{ *var_version=0;goto lbl_version;}
#line 541 "<stdout>"
yy69:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'T':	goto yy71;
	default:	goto yy70;
	}
yy70:
	YYRESTORE ();
	goto yy68;
yy71:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'T':	goto yy72;
	default:	goto yy70;
	}
yy72:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'P':	goto yy73;
	default:	goto yy70;
	}
yy73:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '/':	goto yy74;
	default:	goto yy70;
	}
yy74:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy75;
	default:	goto yy70;
	}
yy75:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '.':	goto yy77;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy75;
	default:	goto yy70;
	}
yy77:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy78;
	default:	goto yy70;
	}
yy78:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy78;
	default:	goto yy80;
	}
yy80:
#line 93 "main.re"
	{ *var_version=4;goto lbl_version;}
#line 641 "<stdout>"
}
#line 94 "main.re"

lbl_version:
   if(!*var_version)
   {
      printf("version nao encontrado!\n");
      return 0;
   }
   
#line 652 "<stdout>"
{
	YYCTYPE yych;
	yych = YYPEEK ();
	switch (yych) {
	case '\n':	goto yy84;
	default:	goto yy83;
	}
yy83:
#line 102 "main.re"
	{ return -3; }
#line 663 "<stdout>"
yy84:
	YYSKIP ();
#line 103 "main.re"
	{ goto lbl_space_request_header;}
#line 668 "<stdout>"
}
#line 104 "main.re"

lbl_space_request_header:
   variable.begin=cursor;
   variable.end=0;
   
#line 676 "<stdout>"
{
	YYCTYPE yych;
	unsigned int yyaccept = 0;
	YYBACKUP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'A':	goto yy89;
	case 'C':	goto yy91;
	case 'F':	goto yy92;
	case 'H':	goto yy93;
	case 'U':	goto yy94;
	default:	goto yy88;
	}
yy88:
#line 109 "main.re"
	{ var_request_header=0;goto lbl_request_header;}
#line 693 "<stdout>"
yy89:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'c':	goto yy146;
	default:	goto yy90;
	}
yy90:
	YYRESTORE ();
	if (yyaccept == 0) {
		goto yy88;
	} else {
		goto yy151;
	}
yy91:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'a':	goto yy114;
	case 'o':	goto yy113;
	default:	goto yy90;
	}
yy92:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'r':	goto yy109;
	default:	goto yy90;
	}
yy93:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'o':	goto yy105;
	default:	goto yy90;
	}
yy94:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 's':	goto yy95;
	default:	goto yy90;
	}
yy95:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'e':	goto yy96;
	default:	goto yy90;
	}
yy96:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'r':	goto yy97;
	default:	goto yy90;
	}
yy97:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '-':	goto yy98;
	default:	goto yy90;
	}
yy98:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'A':	goto yy99;
	default:	goto yy90;
	}
yy99:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'g':	goto yy100;
	default:	goto yy90;
	}
yy100:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'e':	goto yy101;
	default:	goto yy90;
	}
yy101:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'n':	goto yy102;
	default:	goto yy90;
	}
yy102:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 't':	goto yy103;
	default:	goto yy90;
	}
yy103:
	YYSKIP ();
#line 117 "main.re"
	{ var_request_header=8;goto lbl_request_header;}
#line 797 "<stdout>"
yy105:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 's':	goto yy106;
	default:	goto yy90;
	}
yy106:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 't':	goto yy107;
	default:	goto yy90;
	}
yy107:
	YYSKIP ();
#line 116 "main.re"
	{ var_request_header=7;goto lbl_request_header;}
#line 816 "<stdout>"
yy109:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'o':	goto yy110;
	default:	goto yy90;
	}
yy110:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'm':	goto yy111;
	default:	goto yy90;
	}
yy111:
	YYSKIP ();
#line 115 "main.re"
	{ var_request_header=6;goto lbl_request_header;}
#line 835 "<stdout>"
yy113:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'n':	goto yy127;
	default:	goto yy90;
	}
yy114:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'c':	goto yy115;
	default:	goto yy90;
	}
yy115:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'h':	goto yy116;
	default:	goto yy90;
	}
yy116:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'e':	goto yy117;
	default:	goto yy90;
	}
yy117:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '-':	goto yy118;
	default:	goto yy90;
	}
yy118:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'C':	goto yy119;
	default:	goto yy90;
	}
yy119:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'o':	goto yy120;
	default:	goto yy90;
	}
yy120:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'n':	goto yy121;
	default:	goto yy90;
	}
yy121:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 't':	goto yy122;
	default:	goto yy90;
	}
yy122:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'r':	goto yy123;
	default:	goto yy90;
	}
yy123:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'o':	goto yy124;
	default:	goto yy90;
	}
yy124:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'l':	goto yy125;
	default:	goto yy90;
	}
yy125:
	YYSKIP ();
#line 113 "main.re"
	{ var_request_header=4;goto lbl_request_header;}
#line 924 "<stdout>"
yy127:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'n':	goto yy129;
	case 't':	goto yy128;
	default:	goto yy90;
	}
yy128:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'e':	goto yy137;
	default:	goto yy90;
	}
yy129:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'e':	goto yy130;
	default:	goto yy90;
	}
yy130:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'c':	goto yy131;
	default:	goto yy90;
	}
yy131:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 't':	goto yy132;
	default:	goto yy90;
	}
yy132:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'i':	goto yy133;
	default:	goto yy90;
	}
yy133:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'o':	goto yy134;
	default:	goto yy90;
	}
yy134:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'n':	goto yy135;
	default:	goto yy90;
	}
yy135:
	YYSKIP ();
#line 114 "main.re"
	{ var_request_header=5;goto lbl_request_header;}
#line 986 "<stdout>"
yy137:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'n':	goto yy138;
	default:	goto yy90;
	}
yy138:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 't':	goto yy139;
	default:	goto yy90;
	}
yy139:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case '-':	goto yy140;
	default:	goto yy90;
	}
yy140:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'T':	goto yy141;
	default:	goto yy90;
	}
yy141:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'y':	goto yy142;
	default:	goto yy90;
	}
yy142:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'p':	goto yy143;
	default:	goto yy90;
	}
yy143:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'e':	goto yy144;
	default:	goto yy90;
	}
yy144:
	YYSKIP ();
#line 118 "main.re"
	{ var_request_header=9;goto lbl_request_header;}
#line 1040 "<stdout>"
yy146:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'c':	goto yy147;
	default:	goto yy90;
	}
yy147:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'e':	goto yy148;
	default:	goto yy90;
	}
yy148:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'p':	goto yy149;
	default:	goto yy90;
	}
yy149:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 't':	goto yy150;
	default:	goto yy90;
	}
yy150:
	yyaccept = 1;
	YYSKIP ();
	YYBACKUP ();
	yych = YYPEEK ();
	switch (yych) {
	case '-':	goto yy152;
	default:	goto yy151;
	}
yy151:
#line 110 "main.re"
	{ var_request_header=1;goto lbl_request_header;}
#line 1081 "<stdout>"
yy152:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
	case 'E':	goto yy154;
	case 'L':	goto yy153;
	default:	goto yy90;
	}
yy153:
	YYSKIP ();
	yych = YYPEEK ();
	switch (yych) {
